# SeQaM

./: .gitignore  CONTRIBUTING.md  Contributing.md  README.md  seqam-specification.md  todo.md
api/: Dockerfile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
api/deploy/k8s/: _var_snap_microk8s_current_args_certs.d_REPOSITORY_hosts.toml  add-docker-repository.sh  deploy.sh  deploy.yaml  service.yaml
api/docs/: api.yaml
api/src/: seqam_data_fh_dortmund_project_emulate
api/src/edpapi_fh_dortmund_project_emulate/: app.py
api/src/edpapi_fh_dortmund_project_emulate/application/: ApplicationService.py  ApplicationServiceSignoz.py
api/src/edpapi_fh_dortmund_project_emulate/common/: DbService.py  utils.py
api/src/edpapi_fh_dortmund_project_emulate/console/: message.py  utils.py
api/src/edpapi_fh_dortmund_project_emulate/experiment/: experiment.py  experiment_service.py  experiment_service_signoz.py  merge_utils.py
api/src/edpapi_fh_dortmund_project_emulate/metric/: Cpu.py  MetricService.py  MetricServiceSignoz.py  Ram.py  metric_service_own.py
api/src/edpapi_fh_dortmund_project_emulate/migration/: migrator.py
api/src/edpapi_fh_dortmund_project_emulate/server/: ServerService.py  ServerServiceSignoz.py  server_service_own.py
api/src/edpapi_fh_dortmund_project_emulate/span/: Span.py  SpanService.py  SpanServiceSignoz.py
api/src/edpapi_fh_dortmund_project_emulate/static/: index.html
api/tests/: db_service_mock.py  test_experiment_service_signoz.py  test_merge_experiment_steps.py  test_span_service_signoz.py
api/tests/data/: test_experiment_service_durations_ms.json  test_experiment_service_durations_nanos.json
common/: build.sh  pyproject.toml
common/src/seqam_data_fh_dortmund_project_emulate/: cpu.py  memory.py  net.py  system_state.py
src/: pyproject.toml
src/main/Central/: README.md
src/main/Central/Configuration/: ExperimentConfig.json  ModuleConfig.json  ScenarioConfig.json  env
src/main/Central/ModuleManagement/: Constants.py  ModuleExecutionException.py  (+10 more)
src/main/Distributed/: README.md  requirements.txt
src/main/Network/: ModuleManagement  README.md  requirements.txt  stress_network.py
src/main/agent-less/: deploy.sh  docker-compose.yaml
src/test/: test_command_translator_module.py  test_event_orchestrator_module.py  test_experiment_dispatcher.py  test_json_reader.py  test_stress_handler_module.py
(+119 files in other folders)
